# TreeOfThought

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  makefile  pyproject.toml  streamlit_app.py  tree_of_thoughts.py
