[tool.poetry]
name = "tot"
version = "0.1.0"
description = ""
authors = ["Jim Gibbs <jamesvgibbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
